--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   rxdart: ^0.24.1
   cached_network_image: ^2.2.0
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
